another fixes for Violet Hold scripts Signed-off-by: Danstahr <Dan.Stahr@gmail.com>

--- a/VC90/90ScriptDev2.vcproj
+++ b/VC90/90ScriptDev2.vcproj
@@ -2056,6 +2056,10 @@
 					Name="violet_hold"
 					>
 					<File
+						RelativePath="..\scripts\northrend\violet_hold\boss_cyanigosa.cpp"
+						>
+					</File>
+					<File
 						RelativePath="..\scripts\northrend\violet_hold\boss_erekem.cpp"
 						>
 					</File>
