Gundrak scripts Signed-off-by: Danstahr <Dan.Stahr@gmail.com>

--- a/VC90/90ScriptDev2.vcproj
+++ b/VC90/90ScriptDev2.vcproj
@@ -1768,6 +1768,10 @@
 						>
 					</File>
 					<File
+						RelativePath="..\scripts\northrend\gundrak\boss_eck.cpp"
+						>
+					</File>
+					<File
 						RelativePath="..\scripts\northrend\gundrak\boss_galdarah.cpp"
 						>
 					</File>
